# project-tracker-axum

./: .gitignore  .postcssrc  Cargo.toml  notes  package-lock.json  package.json  tailwind.config.js  types.ts
.parcel-cache/: 1d11806abf58443d  37dbec41244c32ee.txt  7c901be8e1fcacd1  839725f60ad82a5f  data.mdb  lock.mdb
backend/: Cargo.toml
backend/src/: app.rs
backend/src/controllers/: auth.rs  mod.rs
backend/src/db/: mod.rs
backend/src/models/: auth.rs  contractors.rs  materials.rs  mod.rs  users.rs
backend/src/routes/: auth.rs  contractors.rs  materials.rs  mod.rs  (+3 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  main.ts  types.ts
public/css/: index.css  main.css  main.css.map
public/js/: auth.ts  bundle.js  bundle.js.map  index.js  index.ts  login.ts  signup.ts
scss/: main.scss
scss/abstracts/: _variables.scss
scss/base/: _reset.scss  _typography.scss
scss/components/: _buttons.scss  _form.scss  _formlogin.scss  _index.scss  _loginform.scss
scss/layouts/: _form-container.scss  _index.scss
scss/pages/: _home.scss  _index.scss
scss/utilities/: _utilities.scss
src/: app.rs  appstate.rs  errors.rs  main.rs  utils.rs
src/controllers/: auth.rs  contractors.rs  materials.rs  mod.rs  projects.rs  systems.rs  users.rs
src/db/: mod.rs
src/errors/: mod.rs
src/models/: auth.rs  contractors.rs  equipment.rs  materials.rs  mod.rs  projects.rs  response.rs  systems.rs  users.rs
src/routes/: auth.rs  contractors.rs  cookie.rs  materials.rs  mod.rs  projects.rs  systems.rs  users.rs  views.rs
templates/: _formlogin.html  _formsignup.html  _loginform.html  base.html  hello.html  home.html  overview.html  signup.html
(+2 files in other folders)
