[package]
name = "project-tracker-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.1", features = ["headers"]}
bcrypt = "0.14.0"
chrono = "0.4.23"
dotenv = "0.15.0"
futures = "0.3.25"
headers = "0.3.8"
hyper = {version = "0.14.23", features = ["full"]}
jsonwebtoken = "8.2.0"
mongodb = "2.3.1"
serde = {version = "1.0.152", features=["derive"]}
serde_json = "1.0.91"
tokio = {version = "1.23.0", features = ["full"]}
tower = "0.4.13"
tower-cookies = "0.9.0"
tower-http = {version = "0.3.5", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
